# create3_sevensense

./: README.md
install/: local_setup.sh  setup.sh
install/irobot_create_common_bringup/share/irobot_create_common_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/irobot_create_control/share/irobot_create_control/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/irobot_create_description/share/irobot_create_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/irobot_create_gazebo_bringup/share/irobot_create_gazebo_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/irobot_create_gazebo_plugins/include/irobot_create_gazebo_plugins/: docking_manager.hpp  gazebo_ros_bumper.hpp  gazebo_ros_cliff_sensor.hpp  gazebo_ros_docking_status.hpp  gazebo_ros_helpers.hpp  gazebo_ros_imu.hpp  gazebo_ros_ir_intensity_sensor.hpp  gazebo_ros_ir_opcode.hpp  gazebo_ros_optical_mouse.hpp  gazebo_ros_wheel_drop.hpp
install/irobot_create_gazebo_plugins/share/irobot_create_gazebo_plugins/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/irobot_create_gazebo_sim/share/irobot_create_gazebo_sim/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  (+2 more)
log/: latest_build  latest_list
src/create3_sim/svg_drive_goals/: CMakeLists.txt
src/create3_sim/svg_drive_goals/src/: svg_path_converter.cpp
(+216 files in other folders)
